# rust_api

./: .env  Cargo.toml
migrations/: 20250518192646_create_users_table.sql  20250518192710_create_posts_table.sql  20250520121811_user_password.sql  20250520122520_create_posts_tablew.sql  20250520122652_create_reactions_table.sql
src/: main.rs
src/auth/: admin.rs  authorization.rs  get_user.rs  jwt.rs  login.rs  mod.rs
src/posts/: create.rs  delete.rs  many.rs  mod.rs  update.rs
src/reactions/: mod.rs  post.rs  user.rs
src/users/: create.rs  get_user.rs  mod.rs
