[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-native-tls", "postgres", "derive","chrono"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = { version = "0.4.41", features = ["serde"] }
http = "1.3.1"
tower = "0.5.2"
sqlx-conditional-queries = { version = "0.3.2", features = ["postgres"] }